# calculator

./: .gitignore  LICENSE  Makefile  README.md  config.json  flake.nix  history.txt  main.py  pyproject.toml  settings.json  setup.py  styles.qss  todo.md
src/: general.py  history.py  settings.py
src/BasicCalculator/: Calculator.py
src/InputModule/: InputModule.py  test_calc.py
src/creditCalculation/: creditCalc.py
src/geometry/: geometry.py
src/informatik/: binaryTo.py  decimalTo.py  hexTo.py  octalTo.py  ternaryTo.py
src/mathematical_functions/: mathematical_functions.py
src/percent/: percent.py
ui/: main_window.ui
ui/views/BasicModule/: BasicModule.py  BasicModule.ui
ui/views/Informatik/: __init__.py  informatik.py  informatik.ui
ui/views/InputModul/: BasicModul.ui  InputModul.ui  InputModulCode.py  __init__.py
ui/views/InputModule/: InputModule.py  InputModule.ui  __init__.py
ui/views/MathematicalFunctions/: MathematicalFunctions.py  __init__.py  mathematical_functions.py  mathematical_functions.ui
ui/views/basicmodul/: BasicModul.py  __init__.py
ui/views/creditCalculation/: __init__.py  creditCalculation.py  creditCalculation.ui
ui/views/geometry/: geometry.py  geometry.ui
ui/views/percent/: __init__.py  percent.py  percent.ui
ui/views/school/: school.py  school.ui
ui/views/settings/: settings.py  settings.ui
ui/views/side_calc/: __init__.py  side_calc.py  side_calc.ui
ui/views/startScreen/: __init__.py  startScreen.py  start_screen.ui
